--- a/home.html
+++ b/home.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<title>Our Funky HTML Page</title>
-<meta name="description" content="Our first page">
+<title>WWG1WGA</title>
+<meta name="description" content="Win.">
 <meta name="keywords" content="html tutorial template">
 </head>
 <body>
-Content goes here.
+WWG1WGA.
 </body>
 </html>
